--- a/doc/latex/_0dcode-example.tex
+++ b/doc/latex/_0dcode-example.tex
@@ -1,4 +1,4 @@
 \hypertarget{_0dcode-example}{}\doxysection{@code}
-mkgentoo language=fr minimal=true debug\+\_\+mode=true ncpus=8 nonroot\+\_\+user=ken passwd=\textquotesingle{}util!\+Hx\&32F\textquotesingle{} rootpasswd=\textquotesingle{}Hk\+\_\+32!\+\_\+\+CD\textquotesingle{} cleanup=false 
+gentoolize language=fr minimal=true debug\+\_\+mode=true ncpus=8 nonroot\+\_\+user=ken passwd=\textquotesingle{}util!\+Hx\&32F\textquotesingle{} rootpasswd=\textquotesingle{}Hk\+\_\+32!\+\_\+\+CD\textquotesingle{} cleanup=false 
 
 code 
