--- a/doc/latex/group__auxiliary_functions.tex
+++ b/doc/latex/group__auxiliary_functions.tex
@@ -279,5 +279,5 @@ true if legitimate option otherwise false.
 \end{DoxyReturn}
 
 
-Definition at line 124 of file mkgentoo.\+sh.
+Definition at line 124 of file gentoolize.\+sh.
 
