--- a/doc/latex/refman.tex
+++ b/doc/latex/refman.tex
@@ -193,7 +193,7 @@
 \input{a_8sh}
 \input{build__virtualbox_8sh}
 \input{fetch__clonezilla__iso_8sh}
-\input{mkgentoo_8sh}
+\input{gentoolize_8sh}
 \input{mkvm_8sh}
 \input{mkvm__chroot_8sh}
 \input{utils_8sh}
