--- a/doc/man/man3/auxiliaryFunctions.3
+++ b/doc/man/man3/auxiliaryFunctions.3
@@ -242,7 +242,7 @@ true if legitimate option otherwise false\&.
 .PP
 
 .PP
-Definition at line 124 of file mkgentoo\&.sh\&.
+Definition at line 124 of file gentoolize\&.sh\&.
 .SH "Author"
 .PP 
 Generated automatically by Doxygen for gentoo-creator from the source code\&.
