--- a/doc/latex/_2home_2fab_2_dev_2mkgentoo_2scripts_2mkgentoo_8sh-example.tex
+++ b/doc/latex/_2home_2fab_2_dev_2mkgentoo_2scripts_2mkgentoo_8sh-example.tex
@@ -1,7 +1,7 @@
-\hypertarget{_2home_2fab_2_dev_2mkgentoo_2scripts_2mkgentoo_8sh-example}{}\doxysection{/home/fab/\+Dev/mkgentoo/scripts/mkgentoo.\+sh}
+\hypertarget{_2home_2fab_2_dev_2gentoolize_2scripts_2gentoolize_8sh-example}{}\doxysection{/home/fab/\+Dev/gentoolize/scripts/gentoolize.\+sh}
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{mkgentoo language=fr minimal=\textcolor{keyword}{true} debug\_mode=\textcolor{keyword}{true} ncpus=8 nonroot\_user=ken passwd=\textcolor{stringliteral}{'util!Hx\&32F'} rootpasswd=\textcolor{stringliteral}{'Hk\_32!\_CD'} cleanup=\textcolor{keyword}{false}}
+\DoxyCodeLine{gentoolize language=fr minimal=\textcolor{keyword}{true} debug\_mode=\textcolor{keyword}{true} ncpus=8 nonroot\_user=ken passwd=\textcolor{stringliteral}{'util!Hx\&32F'} rootpasswd=\textcolor{stringliteral}{'Hk\_32!\_CD'} cleanup=\textcolor{keyword}{false}}
 \end{DoxyCode}
 
 
@@ -10,9 +10,9 @@
 \DoxyCodeLine{\textcolor{preprocessor}{\#\#}}
 \DoxyCodeLine{\textcolor{preprocessor}{\# Copyright (c) 2020 Fabrice Nicol <fabrnicol@gmail.com>}}
 \DoxyCodeLine{\textcolor{preprocessor}{\#}}
-\DoxyCodeLine{\textcolor{preprocessor}{\# This file is part of mkgentoo.}}
+\DoxyCodeLine{\textcolor{preprocessor}{\# This file is part of gentoolize.}}
 \DoxyCodeLine{\textcolor{preprocessor}{\#}}
-\DoxyCodeLine{\textcolor{preprocessor}{\# mkgentoo is free software; you can redistribute it and/or}}
+\DoxyCodeLine{\textcolor{preprocessor}{\# gentoolize is free software; you can redistribute it and/or}}
 \DoxyCodeLine{\textcolor{preprocessor}{\# modify it under the terms of the GNU Lesser General Public}}
 \DoxyCodeLine{\textcolor{preprocessor}{\# License as published by the Free Software Foundation; either}}
 \DoxyCodeLine{\textcolor{preprocessor}{\# version 3 of the License, or (at your option) any later version.}}
@@ -29,7 +29,7 @@
 \DoxyCodeLine{}
 \DoxyCodeLine{\textcolor{preprocessor}{\#!/bin/bash}}
 \DoxyCodeLine{}
-\DoxyCodeLine{\textcolor{preprocessor}{\#\# @file mkgentoo.sh}}
+\DoxyCodeLine{\textcolor{preprocessor}{\#\# @file gentoolize.sh}}
 \DoxyCodeLine{\textcolor{preprocessor}{\#\# @author Fabrice Nicol <fabrnicol@gmail.com>}}
 \DoxyCodeLine{\textcolor{preprocessor}{\#\# @copyright GPL v.3}}
 \DoxyCodeLine{\textcolor{preprocessor}{\#\# @brief Process options, create Gentoo VirtualBox machine and optionally create clonezilla install medium}}
@@ -37,16 +37,16 @@
 \DoxyCodeLine{\textcolor{preprocessor}{\#\# @defgroup createInstaller Create Gentoo linux image and installer.}}
 \DoxyCodeLine{\textcolor{preprocessor}{\#\# @par USAGE}}
 \DoxyCodeLine{\textcolor{preprocessor}{\#\# @code}}
-\DoxyCodeLine{\textcolor{preprocessor}{\#\# mkgentoo  [[switch=argument]...]  filename.iso  [1]}}
-\DoxyCodeLine{\textcolor{preprocessor}{\#\# mkgentoo  [[switch=argument]...]                [2]}}
-\DoxyCodeLine{\textcolor{preprocessor}{\#\# mkgentoo  help[=md]                             [3]}}
+\DoxyCodeLine{\textcolor{preprocessor}{\#\# gentoolize  [[switch=argument]...]  filename.iso  [1]}}
+\DoxyCodeLine{\textcolor{preprocessor}{\#\# gentoolize  [[switch=argument]...]                [2]}}
+\DoxyCodeLine{\textcolor{preprocessor}{\#\# gentoolize  help[=md]                             [3]}}
 \DoxyCodeLine{\textcolor{preprocessor}{\#\# @endcode}}
 \DoxyCodeLine{\textcolor{preprocessor}{\#\# @par}}
 \DoxyCodeLine{\textcolor{preprocessor}{\#\# Usage [1] creates a bootable ISO output file with a current Gentoo distribution.   @n}}
 \DoxyCodeLine{\textcolor{preprocessor}{\#\# Usage [2] creates a VirtualBox VDI dynamic disk and a virtual machine with name Gentoo.   @n}}
 \DoxyCodeLine{\textcolor{preprocessor}{\#\# Usage [3] prints this help, in markdown form if argument 'md' is specified.  @n}}
 \DoxyCodeLine{\textcolor{preprocessor}{\#\# @par}}
-\DoxyCodeLine{\textcolor{preprocessor}{\#\# Run: @code mkgentoo help @endcode to print a list of possible switches and arguments.}}
+\DoxyCodeLine{\textcolor{preprocessor}{\#\# Run: @code gentoolize help @endcode to print a list of possible switches and arguments.}}
 \DoxyCodeLine{\textcolor{preprocessor}{\#\#}}
 \DoxyCodeLine{\textcolor{preprocessor}{\#\# @warning you should have at least 55 GB of free disk space in the current directory or in vmpath if specified.}}
 \DoxyCodeLine{\textcolor{preprocessor}{\#\# Boolean values are either 'true' or 'false'. For example, to build a minimal distribution,}}
@@ -54,16 +54,16 @@
 \DoxyCodeLine{\textcolor{preprocessor}{\#\#}}
 \DoxyCodeLine{\textcolor{preprocessor}{\#\# @example}}
 \DoxyCodeLine{\textcolor{preprocessor}{\#\# @code}}
-\DoxyCodeLine{\textcolor{preprocessor}{\#\# mkgentoo language=fr minimal=true debug\_mode=true ncpus=8 nonroot\_user=ken passwd='util!Hx\&32F' rootpasswd='Hk\_32!\_CD' cleanup=false}}
+\DoxyCodeLine{\textcolor{preprocessor}{\#\# gentoolize language=fr minimal=true debug\_mode=true ncpus=8 nonroot\_user=ken passwd='util!Hx\&32F' rootpasswd='Hk\_32!\_CD' cleanup=false}}
 \DoxyCodeLine{\textcolor{preprocessor}{\#\# @endcode}}
 \DoxyCodeLine{}
 \DoxyCodeLine{cd ..}
 \DoxyCodeLine{}
 \DoxyCodeLine{CLI=\textcolor{stringliteral}{"\$*"}}
 \DoxyCodeLine{}
-\DoxyCodeLine{declare -\/a \mbox{\hyperlink{mkgentoo_8sh_a214cb10953cb8efbb6a2092fdb4ff6fd}{ARR}}}
+\DoxyCodeLine{declare -\/a \mbox{\hyperlink{gentoolize_8sh_a214cb10953cb8efbb6a2092fdb4ff6fd}{ARR}}}
 \DoxyCodeLine{}
-\DoxyCodeLine{\mbox{\hyperlink{mkgentoo_8sh_a214cb10953cb8efbb6a2092fdb4ff6fd}{ARR}}=(\textcolor{stringliteral}{"minimal"}     \textcolor{stringliteral}{"Remove *libreoffice* and *data science tools* from default list of installed software"}  \textcolor{stringliteral}{"false"}}
+\DoxyCodeLine{\mbox{\hyperlink{gentoolize_8sh_a214cb10953cb8efbb6a2092fdb4ff6fd}{ARR}}=(\textcolor{stringliteral}{"minimal"}     \textcolor{stringliteral}{"Remove *libreoffice* and *data science tools* from default list of installed software"}  \textcolor{stringliteral}{"false"}}
 \DoxyCodeLine{     \textcolor{stringliteral}{"elist"}       \textcolor{stringliteral}{"\(\backslash\)t File containing a list of Gentoo ebuilds to add to the VM on top of stage3"} \textcolor{stringliteral}{"ebuilds.list"}}
 \DoxyCodeLine{     \textcolor{stringliteral}{"vm"}          \textcolor{stringliteral}{"\(\backslash\)t Virtual Machine name"}                                             \textcolor{stringliteral}{"Gentoo"}}
 \DoxyCodeLine{     \textcolor{stringliteral}{"vbpath"}      \textcolor{stringliteral}{"Path to VirtualBox directory"}                                        \textcolor{stringliteral}{"/usr/bin"}}
@@ -102,12 +102,12 @@
 \DoxyCodeLine{     \textcolor{stringliteral}{"usb\_installer"} \textcolor{stringliteral}{"Create Gentoo clone installer on external device. Argument is either a device label (e.g. sdb2, hdb2), or a mountpoint directory (if mounted), or a few consecutive letters of the model, if there is just one such. If unspecified, **usb\_device** value will be used. OS Gentoo will be replaced by Clonezilla installer."}  \textcolor{stringliteral}{""}}
 \DoxyCodeLine{     \textcolor{stringliteral}{"disable\_md5\_check"} \textcolor{stringliteral}{"Disable MD5 checkums verification after downloads"}             \textcolor{stringliteral}{"true"}}
 \DoxyCodeLine{     \textcolor{stringliteral}{"cleanup"}       \textcolor{stringliteral}{"Clean up archives, temporary images and virtual machine after successful completion"}  \textcolor{stringliteral}{"true"}}
-\DoxyCodeLine{     \textcolor{stringliteral}{"debug\_mode"}  \textcolor{stringliteral}{"Do not clean up mkgentoo custom logs at root of gentoo system files before VM shutdown"}  \textcolor{stringliteral}{"false"}}
+\DoxyCodeLine{     \textcolor{stringliteral}{"debug\_mode"}  \textcolor{stringliteral}{"Do not clean up gentoolize custom logs at root of gentoo system files before VM shutdown"}  \textcolor{stringliteral}{"false"}}
 \DoxyCodeLine{     \textcolor{stringliteral}{"help"}          \textcolor{stringliteral}{"\(\backslash\)t This help"}                                                         \textcolor{stringliteral}{""}}
 \DoxyCodeLine{}
 \DoxyCodeLine{    )}
 \DoxyCodeLine{}
-\DoxyCodeLine{ARRAY\_LENGTH=\$((\$\{\#\mbox{\hyperlink{mkgentoo_8sh_a214cb10953cb8efbb6a2092fdb4ff6fd}{ARR}}[*]\}/3))}
+\DoxyCodeLine{ARRAY\_LENGTH=\$((\$\{\#\mbox{\hyperlink{gentoolize_8sh_a214cb10953cb8efbb6a2092fdb4ff6fd}{ARR}}[*]\}/3))}
 \DoxyCodeLine{}
 \DoxyCodeLine{ISO=\textcolor{stringliteral}{"downloaded.iso"}}
 \DoxyCodeLine{}
@@ -131,9 +131,9 @@
 \DoxyCodeLine{       echo \textcolor{stringliteral}{"Please update and reinstall"}}
 \DoxyCodeLine{       exit -\/1}
 \DoxyCodeLine{   fi}
-\DoxyCodeLine{   local sw=\$\{\mbox{\hyperlink{mkgentoo_8sh_a214cb10953cb8efbb6a2092fdb4ff6fd}{ARR}}[\$((\$1 * 3))]\}}
-\DoxyCodeLine{   local desc=\$\{\mbox{\hyperlink{mkgentoo_8sh_a214cb10953cb8efbb6a2092fdb4ff6fd}{ARR}}[\$((\$1 * 3 + 1))]\}}
-\DoxyCodeLine{   local \textcolor{keywordflow}{default}=\$\{\mbox{\hyperlink{mkgentoo_8sh_a214cb10953cb8efbb6a2092fdb4ff6fd}{ARR}}[\$((\$1 * 3 + 2))]\}}
+\DoxyCodeLine{   local sw=\$\{\mbox{\hyperlink{gentoolize_8sh_a214cb10953cb8efbb6a2092fdb4ff6fd}{ARR}}[\$((\$1 * 3))]\}}
+\DoxyCodeLine{   local desc=\$\{\mbox{\hyperlink{gentoolize_8sh_a214cb10953cb8efbb6a2092fdb4ff6fd}{ARR}}[\$((\$1 * 3 + 1))]\}}
+\DoxyCodeLine{   local \textcolor{keywordflow}{default}=\$\{\mbox{\hyperlink{gentoolize_8sh_a214cb10953cb8efbb6a2092fdb4ff6fd}{ARR}}[\$((\$1 * 3 + 2))]\}}
 \DoxyCodeLine{   local vm\_arg=\$(echo \$\{CLI\} | sed -\/E \textcolor{stringliteral}{"s/(\string^\$\{sw\}|.* \$\{sw\})=([\string^ ]+).*/\(\backslash\)2/"})}
 \DoxyCodeLine{   ISO\_OUTPUT=\$(echo \$\{CLI\} | sed -\/E \textcolor{stringliteral}{'s/.*(\(\backslash\)b\(\backslash\)w+)\(\backslash\).(iso|ISO)/\(\backslash\)1\(\backslash\).iso/'})}
 \DoxyCodeLine{   \textcolor{keywordflow}{if} test \textcolor{stringliteral}{"\$\{ISO\_OUTPUT\}"} != \textcolor{stringliteral}{""} -\/a \textcolor{stringliteral}{"\$\{ISO\_OUTPUT\}"} != \textcolor{stringliteral}{"\$\{CLI\}"}; then}
@@ -176,9 +176,9 @@
 \DoxyCodeLine{}
 \DoxyCodeLine{\textcolor{keyword}{function} help\_md \{}
 \DoxyCodeLine{   echo \textcolor{stringliteral}{"**USAGE:**  "}}
-\DoxyCodeLine{   echo \textcolor{stringliteral}{"**mkgentoo**  [[switch=argument]...]  filename.iso  [1]  "}}
-\DoxyCodeLine{   echo \textcolor{stringliteral}{"**mkgentoo**  [[switch=argument]...]                [2]  "}}
-\DoxyCodeLine{   echo \textcolor{stringliteral}{"**mkgentoo**  help[=md]                             [3]  "}}
+\DoxyCodeLine{   echo \textcolor{stringliteral}{"**gentoolize**  [[switch=argument]...]  filename.iso  [1]  "}}
+\DoxyCodeLine{   echo \textcolor{stringliteral}{"**gentoolize**  [[switch=argument]...]                [2]  "}}
+\DoxyCodeLine{   echo \textcolor{stringliteral}{"**gentoolize**  help[=md]                             [3]  "}}
 \DoxyCodeLine{   echo \textcolor{stringliteral}{"  "}}
 \DoxyCodeLine{   echo \textcolor{stringliteral}{"Usage [1] creates a bootable ISO output file with a current Gentoo distribution.  "}}
 \DoxyCodeLine{   echo \textcolor{stringliteral}{"Usage [2] creates a VirtualBox VDI dynamic disk and a virtual machine with name Gentoo.  "}}
@@ -388,7 +388,7 @@
 \DoxyCodeLine{   rc=\textcolor{stringliteral}{".bashrc"}}
 \DoxyCodeLine{   cp -\/vf /etc/bash.bashrc \$\{rc\}}
 \DoxyCodeLine{   \textcolor{keywordflow}{for} ((i=0; i<ARRAY\_LENGTH; i++)); \textcolor{keywordflow}{do}}
-\DoxyCodeLine{       local  capname=\$\{\mbox{\hyperlink{mkgentoo_8sh_a214cb10953cb8efbb6a2092fdb4ff6fd}{ARR}}[\$((i * 3))]\string^\string^\}}
+\DoxyCodeLine{       local  capname=\$\{\mbox{\hyperlink{gentoolize_8sh_a214cb10953cb8efbb6a2092fdb4ff6fd}{ARR}}[\$((i * 3))]\string^\string^\}}
 \DoxyCodeLine{       local  expstring=\textcolor{stringliteral}{"export \$\{capname\}=\(\backslash\)"\$\{!capname\}\(\backslash\)""}}
 \DoxyCodeLine{       echo \textcolor{stringliteral}{"\$\{expstring\}"}}
 \DoxyCodeLine{       echo \textcolor{stringliteral}{"\$\{expstring\}"} >> \$\{rc\}}
@@ -452,10 +452,10 @@
 \DoxyCodeLine{   \textcolor{keywordflow}{return} \$\{res\}}
 \DoxyCodeLine{\}}
 \DoxyCodeLine{}
-\DoxyCodeLine{\textcolor{preprocessor}{\# mkvm.sh should be adjacent to mkgentoo.sh}}
+\DoxyCodeLine{\textcolor{preprocessor}{\# mkvm.sh should be adjacent to gentoolize.sh}}
 \DoxyCodeLine{}
 \DoxyCodeLine{\textcolor{keyword}{function} create\_vm \{}
-\DoxyCodeLine{   export \mbox{\hyperlink{mkgentoo_8sh_ad1451b50408769582d8f5bd4254fe7b1}{PATH}}=\$\{\mbox{\hyperlink{mkgentoo_8sh_ad1451b50408769582d8f5bd4254fe7b1}{PATH}}\}:\$\{VBPATH\}}
+\DoxyCodeLine{   export \mbox{\hyperlink{gentoolize_8sh_ad1451b50408769582d8f5bd4254fe7b1}{PATH}}=\$\{\mbox{\hyperlink{gentoolize_8sh_ad1451b50408769582d8f5bd4254fe7b1}{PATH}}\}:\$\{VBPATH\}}
 \DoxyCodeLine{   cd \$\{\mbox{\hyperlink{build__virtualbox_8sh_a62ad76d689932a98f7cc9667b6fa903d}{VMPATH}}\}}
 \DoxyCodeLine{   delete\_vm \$\{VM\} \textcolor{stringliteral}{"vdi"}}
 \DoxyCodeLine{   VBoxManage createvm -\/-\/name \textcolor{stringliteral}{"\$\{VM\}"} -\/-\/ostype gentoo\_64  -\/-\/\textcolor{keyword}{register}  -\/-\/basefolder \textcolor{stringliteral}{"\$\{VMPATH\}"}}
