--- a/doc/latex/group__create_installer.tex
+++ b/doc/latex/group__create_installer.tex
@@ -95,7 +95,7 @@ This is only needed to reduce disk space requirements and avoid a temporary R\+A
 \end{DoxyNote}
 
 
-Definition at line 1132 of file mkgentoo.\+sh.
+Definition at line 1132 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gaff07c1d29d6d6a540c726948254a1764}\label{group__create_installer_gaff07c1d29d6d6a540c726948254a1764}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!cleanup@{cleanup}}
@@ -109,7 +109,7 @@ Clean up all temporary files and directpries (except for Virtual\+Box build)
 
 
 
-Definition at line 1435 of file mkgentoo.\+sh.
+Definition at line 1435 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga318b91c23a0df7a900d71338896b124e}\label{group__create_installer_ga318b91c23a0df7a900d71338896b124e}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!clone\_vm\_to\_device@{clone\_vm\_to\_device}}
@@ -133,7 +133,7 @@ Either build it beforehand or specify on commandline\+:
 \end{DoxyNote}
 
 
-Definition at line 1263 of file mkgentoo.\+sh.
+Definition at line 1263 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gaa20a26022083ddbb29df1a6ea3791e0e}\label{group__create_installer_gaa20a26022083ddbb29df1a6ea3791e0e}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!clone\_vm\_to\_raw@{clone\_vm\_to\_raw}}
@@ -151,7 +151,7 @@ Use.
 \end{DoxyCode}
  to clone V\+DI to R\+AW file before bare-\/metal copy to device. 
 
-Definition at line 1287 of file mkgentoo.\+sh.
+Definition at line 1287 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gaf8725880181e1189e31629b07163aaa4}\label{group__create_installer_gaf8725880181e1189e31629b07163aaa4}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!clonezilla\_device\_to\_image@{clonezilla\_device\_to\_image}}
@@ -170,7 +170,7 @@ Image is created under I\+S\+O\+F\+I\+L\+E\+S/home/partimag/image under V\+M\+P\
 \end{DoxyRetVals}
 
 
-Definition at line 1322 of file mkgentoo.\+sh.
+Definition at line 1322 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga9cdb7f95380fd3520d58d31a1cd12f0d}\label{group__create_installer_ga9cdb7f95380fd3520d58d31a1cd12f0d}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!clonezilla\_to\_iso@{clonezilla\_to\_iso}}
@@ -194,7 +194,7 @@ I\+SO can be burned to D\+VD or used to create a bootable U\+SB stick using dd o
 \end{DoxyNote}
 
 
-Definition at line 989 of file mkgentoo.\+sh.
+Definition at line 989 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga532879314181eb08a603971d9ac2b2f3}\label{group__create_installer_ga532879314181eb08a603971d9ac2b2f3}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!create\_install\_usb\_device@{create\_install\_usb\_device}}
@@ -235,7 +235,7 @@ the {\bfseries{sharedfolder}} command may fail vith older version of Virtual\+Bo
 \end{DoxyWarning}
 
 
-Definition at line 1162 of file mkgentoo.\+sh.
+Definition at line 1162 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gafcb910ff0a49712375eabe0631b4dcdd}\label{group__create_installer_gafcb910ff0a49712375eabe0631b4dcdd}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!create\_usb\_system@{create\_usb\_system}}
@@ -256,7 +256,7 @@ Two options are available. If vbox-\/img (patched) is functional after building 
 \end{DoxyRetVals}
 
 
-Definition at line 1409 of file mkgentoo.\+sh.
+Definition at line 1409 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga629c1830d8dbae377193387edd199399}\label{group__create_installer_ga629c1830d8dbae377193387edd199399}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!create\_vm@{create\_vm}}
@@ -277,7 +277,7 @@ VM may be visible (vm type=gui) or without G\+UI (vm type=headless, currently to
 \end{DoxyItemize}
 
 
-Definition at line 853 of file mkgentoo.\+sh.
+Definition at line 853 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga86464f142e32909fb7bd94e35fd2d171}\label{group__create_installer_ga86464f142e32909fb7bd94e35fd2d171}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!dd\_to\_usb@{dd\_to\_usb}}
@@ -294,7 +294,7 @@ Used only if vbox-\/img (patched version) has not been built.
 \end{DoxyNote}
 
 
-Definition at line 1296 of file mkgentoo.\+sh.
+Definition at line 1296 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gac4a43805e885f0c9dc375480c430ec7d}\label{group__create_installer_gac4a43805e885f0c9dc375480c430ec7d}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!deep\_clean@{deep\_clean}}
@@ -308,7 +308,7 @@ Force-\/clean root Virtual\+Box registry.
 
 
 
-Definition at line 709 of file mkgentoo.\+sh.
+Definition at line 709 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga8e416fab9a9e0ffd0b87927d0ec94a25}\label{group__create_installer_ga8e416fab9a9e0ffd0b87927d0ec94a25}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!delete\_vm@{delete\_vm}}
@@ -336,7 +336,7 @@ Powers off, possibly with emergency stop, the VM names as first argument.
 \end{DoxyItemize}
 
 
-Definition at line 763 of file mkgentoo.\+sh.
+Definition at line 763 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gae1918429f97793a7d5ff449988d57ebd}\label{group__create_installer_gae1918429f97793a7d5ff449988d57ebd}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!fetch\_clonezilla\_iso@{fetch\_clonezilla\_iso}}
@@ -376,7 +376,7 @@ Caches it as \$\{I\+SO\}
 \end{DoxyRetVals}
 
 
-Definition at line 457 of file mkgentoo.\+sh.
+Definition at line 457 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gaeea237ee4e4e714889c00f67211ddb2b}\label{group__create_installer_gaeea237ee4e4e714889c00f67211ddb2b}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!fetch\_stage3@{fetch\_stage3}}
@@ -390,7 +390,7 @@ Downloads a fresh stage3 Gentoo archive.
 
 Caches it as \$\{S\+T\+A\+G\+E3\} 
 
-Definition at line 500 of file mkgentoo.\+sh.
+Definition at line 500 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga4a96ee0336af9e52512585ceec9ca3a4}\label{group__create_installer_ga4a96ee0336af9e52512585ceec9ca3a4}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!generate\_Gentoo@{generate\_Gentoo}}
@@ -404,7 +404,7 @@ Launch routines\+: fetch install IO, starge3 archive, create VM.
 
 
 
-Definition at line 1456 of file mkgentoo.\+sh.
+Definition at line 1456 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga88760889d494c075588ae3a9931a702f}\label{group__create_installer_ga88760889d494c075588ae3a9931a702f}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!get\_cache\_clonezilla\_iso@{get\_cache\_clonezilla\_iso}}
@@ -460,7 +460,7 @@ Print usage to stdout.
 
 
 
-Definition at line 447 of file mkgentoo.\+sh.
+Definition at line 447 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga3cd1eb7159583a231db413e892df7f01}\label{group__create_installer_ga3cd1eb7159583a231db413e892df7f01}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!help\_md@{help\_md}}
@@ -474,7 +474,7 @@ Print usage in markdown format.
 
 
 
-Definition at line 409 of file mkgentoo.\+sh.
+Definition at line 409 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga51af30a60f9f02777c6396b8247e356f}\label{group__create_installer_ga51af30a60f9f02777c6396b8247e356f}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!main@{main}}
@@ -487,10 +487,10 @@ Definition at line 409 of file mkgentoo.\+sh.
 Main function launching routines. 
 
 \begin{DoxyRefDesc}{Todo}
-\item[\mbox{\hyperlink{todo__todo000002}{Todo}}]Daemonize the part below generate\+\_\+\+Gentoo when \#\+V\+M\+T\+Y\+PE is {\ttfamily headless} so that the script can be detached completely with {\ttfamily nohup mkgentoo ... \&} \end{DoxyRefDesc}
+\item[\mbox{\hyperlink{todo__todo000002}{Todo}}]Daemonize the part below generate\+\_\+\+Gentoo when \#\+V\+M\+T\+Y\+PE is {\ttfamily headless} so that the script can be detached completely with {\ttfamily nohup gentoolize ... \&} \end{DoxyRefDesc}
 
 
-Definition at line 1493 of file mkgentoo.\+sh.
+Definition at line 1493 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gac524b24b0add02df542887f9b251eb42}\label{group__create_installer_gac524b24b0add02df542887f9b251eb42}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!make\_boot\_from\_livecd@{make\_boot\_from\_livecd}}
@@ -516,7 +516,7 @@ Will be run in the \$\{VM\} virtual machine
 \end{DoxyRetVals}
 
 
-Definition at line 555 of file mkgentoo.\+sh.
+Definition at line 555 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gac1f727409fd593a27f5e4df3270aab31}\label{group__create_installer_gac1f727409fd593a27f5e4df3270aab31}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!process\_clonezilla\_iso@{process\_clonezilla\_iso}}
@@ -535,7 +535,7 @@ Installing the guest additions is a prerequisite to folder sharing between the I
 \end{DoxyNote}
 
 
-Definition at line 1036 of file mkgentoo.\+sh.
+Definition at line 1036 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gaff896e7d0252924e2224ab0cde968609}\label{group__create_installer_gaff896e7d0252924e2224ab0cde968609}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!test\_cli@{test\_cli}}
@@ -556,7 +556,7 @@ Analyse commandline.
 \item Create globals of the form V\+AR=arg when there is var=arg on commandline \item Otherwise assign default values V\+AR=defaults (3rd argument in array \mbox{\hyperlink{group__create_installer_ga2b36d9209dbee6df3e60d878f3e51005}{A\+RR}}) \item Also checks type of argument against types described for \mbox{\hyperlink{group__create_installer_ga2b36d9209dbee6df3e60d878f3e51005}{A\+RR}} \end{DoxyItemize}
 
 
-Definition at line 268 of file mkgentoo.\+sh.
+Definition at line 268 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga9fb02a8000daf0612335a0b6e5f1e815}\label{group__create_installer_ga9fb02a8000daf0612335a0b6e5f1e815}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!test\_cli\_post@{test\_cli\_post}}
@@ -575,7 +575,7 @@ Check commanline coherence and incompatibilities.
 \end{DoxyRetVals}
 
 
-Definition at line 331 of file mkgentoo.\+sh.
+Definition at line 331 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga738e6a30beb886e891dbe9a6befc4d4a}\label{group__create_installer_ga738e6a30beb886e891dbe9a6befc4d4a}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!test\_cli\_pre@{test\_cli\_pre}}
@@ -594,7 +594,7 @@ Check Virtual\+Box version and prepare commandline analysis.
 \end{DoxyRetVals}
 
 
-Definition at line 177 of file mkgentoo.\+sh.
+Definition at line 177 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga321673d67e2987c793505f7f323894a9}\label{group__create_installer_ga321673d67e2987c793505f7f323894a9}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!test\_vm\_running@{test\_vm\_running}}
@@ -618,7 +618,7 @@ Check if VM as first named argument exists and is running.
 \end{DoxyRetVals}
 
 
-Definition at line 699 of file mkgentoo.\+sh.
+Definition at line 699 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga1eee61abdc54f97375ce8ccb16e1e6aa}\label{group__create_installer_ga1eee61abdc54f97375ce8ccb16e1e6aa}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!vbox\_img\_works@{vbox\_img\_works}}
@@ -639,7 +639,7 @@ Test if {\bfseries{vbox-\/img}} is functional.
 \end{DoxyRetVals}
 
 
-Definition at line 1389 of file mkgentoo.\+sh.
+Definition at line 1389 of file gentoolize.\+sh.
 
 
 
@@ -665,7 +665,7 @@ Structure is as follows\+:
 \end{DoxyNote}
 
 
-Definition at line 108 of file mkgentoo.\+sh.
+Definition at line 108 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga9ef029d8966e03b88fd195a68853c184}\label{group__create_installer_ga9ef029d8966e03b88fd195a68853c184}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!ARRAY\_LENGTH@{ARRAY\_LENGTH}}
@@ -679,7 +679,7 @@ Number of switches (true length of array divided by 4)
 
 
 
-Definition at line 115 of file mkgentoo.\+sh.
+Definition at line 115 of file gentoolize.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga86cf981e617fa62d9780236ea2756256}\label{group__create_installer_ga86cf981e617fa62d9780236ea2756256}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!ISO@{ISO}}
@@ -693,5 +693,5 @@ Name of downloaded clonezilla I\+SO file.
 
 
 
-Definition at line 170 of file mkgentoo.\+sh.
+Definition at line 170 of file gentoolize.\+sh.
 
