--- a/doc/latex/index.tex
+++ b/doc/latex/index.tex
@@ -1,7 +1,7 @@
 In a nutshell ~\newline
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{./mkgentoo [command=argument] ... [command=argument]  [file.iso]}
+\DoxyCodeLine{./gentoolize [command=argument] ... [command=argument]  [file.iso]}
 \end{DoxyCode}
  ~\newline
 
