--- a/doc/latex/mkgentoo_8sh.tex
+++ b/doc/latex/mkgentoo_8sh.tex
@@ -1,5 +1,5 @@
-\hypertarget{mkgentoo_8sh}{}\doxysection{mkgentoo.\+sh File Reference}
-\label{mkgentoo_8sh}\index{mkgentoo.sh@{mkgentoo.sh}}
+\hypertarget{gentoolize_8sh}{}\doxysection{gentoolize.\+sh File Reference}
+\label{gentoolize_8sh}\index{gentoolize.sh@{gentoolize.sh}}
 
 
 Process options, create Gentoo Virtual\+Box machine and optionally create clonezilla install medium.  
@@ -70,11 +70,11 @@ Read\+Only Integer \mbox{\hyperlink{group__create_installer_ga9ef029d8966e03b88f
 \begin{DoxyCompactList}\small\item\em Number of switches (true length of array divided by 4) \end{DoxyCompactList}\item 
 Exported String \mbox{\hyperlink{group__create_installer_ga86cf981e617fa62d9780236ea2756256}{I\+SO}} = \char`\"{}downloaded.\+iso\char`\"{}
 \begin{DoxyCompactList}\small\item\em Name of downloaded clonezilla I\+SO file. \end{DoxyCompactList}\item 
-Exported String \mbox{\hyperlink{mkgentoo_8sh_a7e7a3b0c3b3b454c1546882093442181}{C\+R\+E\+A\+T\+E\+\_\+\+I\+SO}} = true
+Exported String \mbox{\hyperlink{gentoolize_8sh_a7e7a3b0c3b3b454c1546882093442181}{C\+R\+E\+A\+T\+E\+\_\+\+I\+SO}} = true
 \item 
-Exported String \mbox{\hyperlink{mkgentoo_8sh_a93f04e4165d1e26b707af12275800ef3}{I\+S\+O\+L\+I\+N\+U\+X\+\_\+\+D\+IR}} = isolinux
+Exported String \mbox{\hyperlink{gentoolize_8sh_a93f04e4165d1e26b707af12275800ef3}{I\+S\+O\+L\+I\+N\+U\+X\+\_\+\+D\+IR}} = isolinux
 \item 
-Exported String \mbox{\hyperlink{mkgentoo_8sh_ad1451b50408769582d8f5bd4254fe7b1}{P\+A\+TH}} = \$\{P\+A\+TH\}\+:\$\{V\+B\+P\+A\+TH\}
+Exported String \mbox{\hyperlink{gentoolize_8sh_ad1451b50408769582d8f5bd4254fe7b1}{P\+A\+TH}} = \$\{P\+A\+TH\}\+:\$\{V\+B\+P\+A\+TH\}
 \end{DoxyCompactItemize}
 
 
@@ -93,9 +93,9 @@ This file is not included into the clonezilla I\+SO live\+CD.
 \begin{DoxyParagraph}{U\+S\+A\+GE}
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{mkgentoo  [[\textcolor{keywordflow}{switch}=argument]...]  filename.iso  [1]}
-\DoxyCodeLine{mkgentoo  [[\textcolor{keywordflow}{switch}=argument]...]                [2]}
-\DoxyCodeLine{mkgentoo  help[=md]                             [3]}
+\DoxyCodeLine{gentoolize  [[\textcolor{keywordflow}{switch}=argument]...]  filename.iso  [1]}
+\DoxyCodeLine{gentoolize  [[\textcolor{keywordflow}{switch}=argument]...]                [2]}
+\DoxyCodeLine{gentoolize  help[=md]                             [3]}
 \end{DoxyCode}
  
 \end{DoxyParagraph}
@@ -108,7 +108,7 @@ Usage \mbox{[}3\mbox{]} prints this help, in markdown form if argument \textquot
 \begin{DoxyParagraph}{}
 Run\+:
 \begin{DoxyCode}{0}
-\DoxyCodeLine{mkgentoo help }
+\DoxyCodeLine{gentoolize help }
 \end{DoxyCode}
  to print a list of possible switches and arguments. 
 \end{DoxyParagraph}
@@ -119,7 +119,7 @@ you should have at least 55 GB of free disk space in the current directory or in
 \begin{DoxyItemize}
 \item Only create the VM and virtual disk, in debug mode, without R or R\+Studio and set new passwords, for a French-\/language platform. Use 8 cores. 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{ mkgentoo language=fr minimal debug\_mode ncpus=8}
+\DoxyCodeLine{ gentoolize language=fr minimal debug\_mode ncpus=8}
 \DoxyCodeLine{nonroot\_user=ken passwd=\textcolor{stringliteral}{'util!Hx\&32F'} rootpasswd=\textcolor{stringliteral}{'Hk\_32!\_CD'} \mbox{\hyperlink{group__create_installer_gaff07c1d29d6d6a540c726948254a1764}{cleanup}}=\textcolor{keyword}{false}}
 \end{DoxyCode}
  \item Create I\+SO clonezilla image of Gentoo linux, burn it to D\+VD, create an installed OS on a U\+SB stick whose model label starts with {\itshape P\+NY} and finally create a clonezilla installer on another U\+SB stick mounted under {\ttfamily  /media/ken/\+A\+A45E } 
@@ -132,33 +132,33 @@ you should have at least 55 GB of free disk space in the current directory or in
 
 
 \doxysubsection{Variable Documentation}
-\mbox{\Hypertarget{mkgentoo_8sh_a7e7a3b0c3b3b454c1546882093442181}\label{mkgentoo_8sh_a7e7a3b0c3b3b454c1546882093442181}} 
-\index{mkgentoo.sh@{mkgentoo.sh}!CREATE\_ISO@{CREATE\_ISO}}
-\index{CREATE\_ISO@{CREATE\_ISO}!mkgentoo.sh@{mkgentoo.sh}}
+\mbox{\Hypertarget{gentoolize_8sh_a7e7a3b0c3b3b454c1546882093442181}\label{gentoolize_8sh_a7e7a3b0c3b3b454c1546882093442181}} 
+\index{gentoolize.sh@{gentoolize.sh}!CREATE\_ISO@{CREATE\_ISO}}
+\index{CREATE\_ISO@{CREATE\_ISO}!gentoolize.sh@{gentoolize.sh}}
 \doxysubsubsection{\texorpdfstring{CREATE\_ISO}{CREATE\_ISO}}
 {\footnotesize\ttfamily Exported String C\+R\+E\+A\+T\+E\+\_\+\+I\+SO = true}
 
 
 
-Definition at line 248 of file mkgentoo.\+sh.
+Definition at line 248 of file gentoolize.\+sh.
 
-\mbox{\Hypertarget{mkgentoo_8sh_a93f04e4165d1e26b707af12275800ef3}\label{mkgentoo_8sh_a93f04e4165d1e26b707af12275800ef3}} 
-\index{mkgentoo.sh@{mkgentoo.sh}!ISOLINUX\_DIR@{ISOLINUX\_DIR}}
-\index{ISOLINUX\_DIR@{ISOLINUX\_DIR}!mkgentoo.sh@{mkgentoo.sh}}
+\mbox{\Hypertarget{gentoolize_8sh_a93f04e4165d1e26b707af12275800ef3}\label{gentoolize_8sh_a93f04e4165d1e26b707af12275800ef3}} 
+\index{gentoolize.sh@{gentoolize.sh}!ISOLINUX\_DIR@{ISOLINUX\_DIR}}
+\index{ISOLINUX\_DIR@{ISOLINUX\_DIR}!gentoolize.sh@{gentoolize.sh}}
 \doxysubsubsection{\texorpdfstring{ISOLINUX\_DIR}{ISOLINUX\_DIR}}
 {\footnotesize\ttfamily Exported String I\+S\+O\+L\+I\+N\+U\+X\+\_\+\+D\+IR = isolinux}
 
 
 
-Definition at line 591 of file mkgentoo.\+sh.
+Definition at line 591 of file gentoolize.\+sh.
 
-\mbox{\Hypertarget{mkgentoo_8sh_ad1451b50408769582d8f5bd4254fe7b1}\label{mkgentoo_8sh_ad1451b50408769582d8f5bd4254fe7b1}} 
-\index{mkgentoo.sh@{mkgentoo.sh}!PATH@{PATH}}
-\index{PATH@{PATH}!mkgentoo.sh@{mkgentoo.sh}}
+\mbox{\Hypertarget{gentoolize_8sh_ad1451b50408769582d8f5bd4254fe7b1}\label{gentoolize_8sh_ad1451b50408769582d8f5bd4254fe7b1}} 
+\index{gentoolize.sh@{gentoolize.sh}!PATH@{PATH}}
+\index{PATH@{PATH}!gentoolize.sh@{gentoolize.sh}}
 \doxysubsubsection{\texorpdfstring{PATH}{PATH}}
 {\footnotesize\ttfamily Exported String P\+A\+TH = \$\{P\+A\+TH\}\+:\$\{V\+B\+P\+A\+TH\}}
 
 
 
-Definition at line 855 of file mkgentoo.\+sh.
+Definition at line 855 of file gentoolize.\+sh.
 
