--- a/doc/latex/tt-example.tex
+++ b/doc/latex/tt-example.tex
@@ -1,5 +1,5 @@
 \hypertarget{tt-example}{}\doxysection{tt}
-$>$ mkgentoo language=fr minimal=true debug\+\_\+mode=true ncpus=8 nonroot\+\_\+user=ken passwd=\textquotesingle{}util!\+Hx\&32F\textquotesingle{} rootpasswd=\textquotesingle{}Hk\+\_\+32!\+\_\+\+CD\textquotesingle{} cleanup=false 
+$>$ gentoolize language=fr minimal=true debug\+\_\+mode=true ncpus=8 nonroot\+\_\+user=ken passwd=\textquotesingle{}util!\+Hx\&32F\textquotesingle{} rootpasswd=\textquotesingle{}Hk\+\_\+32!\+\_\+\+CD\textquotesingle{} cleanup=false 
 
 
 \begin{DoxyCodeInclude}{0}
