--- a/doc/man/man3/todo.3
+++ b/doc/man/man3/todo.3
@@ -7,7 +7,7 @@ todo \- Todo List
 .IP "\fBGlobal \fBcreate_vm\fP ()\fP" 1c
 Find a way to only compact on success and never on failure of VM\&.  
 .IP "\fBGlobal \fBmain\fP ()\fP" 1c
-Daemonize the part below generate_Gentoo when #VMTYPE is \fCheadless\fP so that the script can be detached completely with \fCnohup mkgentoo \&.\&.\&. &\fP  
+Daemonize the part below generate_Gentoo when #VMTYPE is \fCheadless\fP so that the script can be detached completely with \fCnohup gentoolize \&.\&.\&. &\fP  
 .IP "\fBGlobal \fBadjust_environment\fP ()\fP" 1c
 Add more regional options by parametrization of commandline  
 .IP "\fBGlobal \fBinstall_software\fP ()\fP" 1c
