Refresh Doxygen docs

--- a/doc/latex/fetch__functions_8sh.tex
+++ b/doc/latex/fetch__functions_8sh.tex
@@ -11,6 +11,8 @@
 \begin{DoxyCompactList}\small\item\em Either download clonezilla I\+SO file and caches it OR uncaches it. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{fetch__functions_8sh_a996431f89efbe6441611e593254e487f}{fetch\+\_\+process\+\_\+clonezilla\+\_\+iso}} ()
 \begin{DoxyCompactList}\small\item\em Download clonezilla I\+SO file and process it. \end{DoxyCompactList}\item 
+\mbox{\hyperlink{fetch__functions_8sh_ade8328225ffd2dd0c30aa6895637361e}{fetch\+\_\+clonezilla\+\_\+with\+\_\+virtualbox}} ()
+\begin{DoxyCompactList}\small\item\em Download automatic output of Github Actions at fabnicol/clonezila\+\_\+with\+\_\+virtualbox.\+Github. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{fetch__functions_8sh_a747eb6a6a3e3fce1becde116190e868f}{fetch\+\_\+livecd}} ()
 \begin{DoxyCompactList}\small\item\em Downloads Gentoo install CD. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{fetch__functions_8sh_aeea237ee4e4e714889c00f67211ddb2b}{fetch\+\_\+stage3}} ()
@@ -53,6 +55,23 @@ Download clonezilla I\+SO file and caches it.
 
 Definition at line 80 of file fetch\+\_\+functions.\+sh.
 
+\mbox{\Hypertarget{fetch__functions_8sh_ade8328225ffd2dd0c30aa6895637361e}\label{fetch__functions_8sh_ade8328225ffd2dd0c30aa6895637361e}} 
+\index{fetch\_functions.sh@{fetch\_functions.sh}!fetch\_clonezilla\_with\_virtualbox@{fetch\_clonezilla\_with\_virtualbox}}
+\index{fetch\_clonezilla\_with\_virtualbox@{fetch\_clonezilla\_with\_virtualbox}!fetch\_functions.sh@{fetch\_functions.sh}}
+\doxysubsubsection{\texorpdfstring{fetch\_clonezilla\_with\_virtualbox()}{fetch\_clonezilla\_with\_virtualbox()}}
+{\footnotesize\ttfamily fetch\+\_\+clonezilla\+\_\+with\+\_\+virtualbox (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+Download automatic output of Github Actions at fabnicol/clonezila\+\_\+with\+\_\+virtualbox.\+Github. 
+
+\begin{DoxyNote}{Note}
+U\+RL is\+: G\+I\+T\+H\+U\+B\+\_\+\+R\+E\+L\+E\+A\+S\+E\+\_\+\+P\+A\+T\+H/\+W\+O\+R\+K\+F\+L\+O\+W\+\_\+\+T\+AG 
+\end{DoxyNote}
+
+
+Definition at line 199 of file fetch\+\_\+functions.\+sh.
+
 \mbox{\Hypertarget{fetch__functions_8sh_a30dd5a4bfe7845ae1717ec4b142c10e6}\label{fetch__functions_8sh_a30dd5a4bfe7845ae1717ec4b142c10e6}} 
 \index{fetch\_functions.sh@{fetch\_functions.sh}!fetch\_gentoo\_install\_iso@{fetch\_gentoo\_install\_iso}}
 \index{fetch\_gentoo\_install\_iso@{fetch\_gentoo\_install\_iso}!fetch\_functions.sh@{fetch\_functions.sh}}
@@ -84,7 +103,7 @@ Caches it as \$\{I\+SO\}
 \end{DoxyRetVals}
 
 
-Definition at line 199 of file fetch\+\_\+functions.\+sh.
+Definition at line 239 of file fetch\+\_\+functions.\+sh.
 
 \mbox{\Hypertarget{fetch__functions_8sh_a996431f89efbe6441611e593254e487f}\label{fetch__functions_8sh_a996431f89efbe6441611e593254e487f}} 
 \index{fetch\_functions.sh@{fetch\_functions.sh}!fetch\_process\_clonezilla\_iso@{fetch\_process\_clonezilla\_iso}}
@@ -119,7 +138,7 @@ Downloads a fresh stage3 Gentoo archive.
 
 Caches it as \$\{S\+T\+A\+G\+E3\} 
 
-Definition at line 244 of file fetch\+\_\+functions.\+sh.
+Definition at line 287 of file fetch\+\_\+functions.\+sh.
 
 
 
