--- a/doc/latex/group__create_installer.tex
+++ b/doc/latex/group__create_installer.tex
@@ -9,6 +9,12 @@
 \begin{DoxyCompactList}\small\item\em Print usage in markdown format. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_ga34f49d33f396400becb2b774e0e35c61}{help\+\_\+}} ()
 \begin{DoxyCompactList}\small\item\em Print usage to stdout. \end{DoxyCompactList}\item 
+\mbox{\hyperlink{group__create_installer_gad5b7496783f8df9ed740ac18f294a9f8}{manpage}} ()
+\begin{DoxyCompactList}\small\item\em Print help to man page. \end{DoxyCompactList}\item 
+\mbox{\hyperlink{group__create_installer_ga70c71c5dfdef17318756391741c2abb7}{htmlpage}} ()
+\begin{DoxyCompactList}\small\item\em Print help to html page. \end{DoxyCompactList}\item 
+\mbox{\hyperlink{group__create_installer_ga47e912030b40c7567600ab02dc8b8a67}{pdfpage}} ()
+\begin{DoxyCompactList}\small\item\em Print help to pdf page. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_ga70ccc3a81e02612a86b3a3983bc1c586}{validate\+\_\+option}} (option)
 \begin{DoxyCompactList}\small\item\em Check if argument is part of array \mbox{\hyperlink{group__create_installer_ga2b36d9209dbee6df3e60d878f3e51005}{A\+RR}} as a legitimate commandline option. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_gadf12a13e0b8f4032d46e50ccd6e0914e}{get\+\_\+options}} ()
@@ -52,8 +58,14 @@
 \mbox{\hyperlink{group__create_installer_gadc22bf7533f87e3218aba2acbf75e4c0}{add\+\_\+guest\+\_\+additions\+\_\+to\+\_\+clonezilla\+\_\+iso}} ()
 \begin{DoxyCompactList}\small\item\em Download clonezilla I\+SO or recover it from cache calling \mbox{\hyperlink{fetch__functions_8sh_a996431f89efbe6441611e593254e487f}{fetch\+\_\+process\+\_\+clonezilla\+\_\+iso}}. ~\newline
 Upgrade it with virtualbox guest additions. \end{DoxyCompactList}\item 
+\mbox{\hyperlink{group__create_installer_ga31786ef47f514c713cfeb361f37b7ab7}{bind\+\_\+mount\+\_\+clonezilla\+\_\+iso}} ()
+\begin{DoxyCompactList}\small\item\em Fetches the clonezilla I\+SO. mount it to mnt, rsync it to mnt2 and I\+S\+O\+F\+I\+L\+ES bind-\/mount mnt2 live filesystem after unsquashfs. \end{DoxyCompactList}\item 
+\mbox{\hyperlink{group__create_installer_ga692cf2f94dddfbc83f4f0b0dd08526f3}{unmount\+\_\+clonezilla\+\_\+iso}} ()
+\begin{DoxyCompactList}\small\item\em Unmount the clonezilla filesystem after exiting chroot. Restore the squashfs filesystem. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_gaf8725880181e1189e31629b07163aaa4}{clonezilla\+\_\+device\+\_\+to\+\_\+image}} ()
 \begin{DoxyCompactList}\small\item\em Create Clone\+Zilla xz-\/compressed image out of an external block device (like a U\+SB stick) \end{DoxyCompactList}\item 
+\mbox{\hyperlink{group__create_installer_ga154b7fbdd178f7eea9a45c20e67a58d5}{prepare\+\_\+for\+\_\+iso\+\_\+vm}} ()
+\item 
 \mbox{\hyperlink{group__create_installer_ga51af30a60f9f02777c6396b8247e356f}{main}} ()
 \begin{DoxyCompactList}\small\item\em Main function launching routines. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Variables}
@@ -88,7 +100,21 @@ Installing the guest additions is a prerequisite to folder sharing between the I
 \end{DoxyNote}
 
 
-Definition at line 1674 of file mkgentoo.\+sh.
+Definition at line 1751 of file mkgentoo.\+sh.
+
+\mbox{\Hypertarget{group__create_installer_ga31786ef47f514c713cfeb361f37b7ab7}\label{group__create_installer_ga31786ef47f514c713cfeb361f37b7ab7}} 
+\index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!bind\_mount\_clonezilla\_iso@{bind\_mount\_clonezilla\_iso}}
+\index{bind\_mount\_clonezilla\_iso@{bind\_mount\_clonezilla\_iso}!Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}}
+\doxysubsubsection{\texorpdfstring{bind\_mount\_clonezilla\_iso()}{bind\_mount\_clonezilla\_iso()}}
+{\footnotesize\ttfamily bind\+\_\+mount\+\_\+clonezilla\+\_\+iso (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+Fetches the clonezilla I\+SO. mount it to mnt, rsync it to mnt2 and I\+S\+O\+F\+I\+L\+ES bind-\/mount mnt2 live filesystem after unsquashfs. 
+
+
+
+Definition at line 1822 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga4775daa2c57227bcbee9ac38d5e37b9b}\label{group__create_installer_ga4775daa2c57227bcbee9ac38d5e37b9b}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!build\_virtualbox@{build\_virtualbox}}
@@ -131,7 +157,7 @@ build vbox-\/img beforehand.
 \end{DoxyNote}
 
 
-Definition at line 1444 of file mkgentoo.\+sh.
+Definition at line 1520 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gaa20a26022083ddbb29df1a6ea3791e0e}\label{group__create_installer_gaa20a26022083ddbb29df1a6ea3791e0e}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!clone\_vm\_to\_raw@{clone\_vm\_to\_raw}}
@@ -149,7 +175,7 @@ Use.
 \end{DoxyCode}
  to clone V\+DI to R\+AW file before bare-\/metal copy to device. 
 
-Definition at line 1491 of file mkgentoo.\+sh.
+Definition at line 1567 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gaf8725880181e1189e31629b07163aaa4}\label{group__create_installer_gaf8725880181e1189e31629b07163aaa4}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!clonezilla\_device\_to\_image@{clonezilla\_device\_to\_image}}
@@ -168,7 +194,7 @@ Image is created under I\+S\+O\+F\+I\+L\+E\+S/home/partimag/image under V\+M\+P\
 \end{DoxyRetVals}
 
 
-Definition at line 1807 of file mkgentoo.\+sh.
+Definition at line 1897 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga9cdb7f95380fd3520d58d31a1cd12f0d}\label{group__create_installer_ga9cdb7f95380fd3520d58d31a1cd12f0d}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!clonezilla\_to\_iso@{clonezilla\_to\_iso}}
@@ -192,7 +218,7 @@ I\+SO can be burned to D\+VD or used to create a bootable U\+SB stick using dd o
 \end{DoxyNote}
 
 
-Definition at line 1625 of file mkgentoo.\+sh.
+Definition at line 1701 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga9c894430bd3cf9eb3088505d042ae1f4}\label{group__create_installer_ga9c894430bd3cf9eb3088505d042ae1f4}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!create\_device\_system@{create\_device\_system}}
@@ -221,7 +247,7 @@ Requires {\bfseries{hot\+\_\+install}} on command line to be activated as a secu
 \end{DoxyNote}
 
 
-Definition at line 1560 of file mkgentoo.\+sh.
+Definition at line 1636 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gaf1997aed978fc339deb4a971444274a2}\label{group__create_installer_gaf1997aed978fc339deb4a971444274a2}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!create\_iso\_vm@{create\_iso\_vm}}
@@ -245,7 +271,7 @@ the {\bfseries{sharedfolder}} command may fail vith older version of Virtual\+Bo
 \end{DoxyWarning}
 
 
-Definition at line 1304 of file mkgentoo.\+sh.
+Definition at line 1380 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga629c1830d8dbae377193387edd199399}\label{group__create_installer_ga629c1830d8dbae377193387edd199399}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!create\_vm@{create\_vm}}
@@ -266,7 +292,7 @@ VM may be visible (vm type=gui) or without G\+UI (vm type=headless, currently to
 \end{DoxyItemize}
 
 
-Definition at line 1086 of file mkgentoo.\+sh.
+Definition at line 1156 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga86464f142e32909fb7bd94e35fd2d171}\label{group__create_installer_ga86464f142e32909fb7bd94e35fd2d171}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!dd\_to\_usb@{dd\_to\_usb}}
@@ -283,7 +309,7 @@ Used only if vbox-\/img (patched version) has not been built.
 \end{DoxyNote}
 
 
-Definition at line 1501 of file mkgentoo.\+sh.
+Definition at line 1577 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gac4a43805e885f0c9dc375480c430ec7d}\label{group__create_installer_gac4a43805e885f0c9dc375480c430ec7d}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!deep\_clean@{deep\_clean}}
@@ -297,7 +323,7 @@ Force-\/clean root Virtual\+Box registry.
 
 
 
-Definition at line 930 of file mkgentoo.\+sh.
+Definition at line 1000 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga8e416fab9a9e0ffd0b87927d0ec94a25}\label{group__create_installer_ga8e416fab9a9e0ffd0b87927d0ec94a25}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!delete\_vm@{delete\_vm}}
@@ -325,7 +351,7 @@ Powers off, possibly with emergency stop, the VM names as first argument.
 \end{DoxyItemize}
 
 
-Definition at line 986 of file mkgentoo.\+sh.
+Definition at line 1056 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga4a96ee0336af9e52512585ceec9ca3a4}\label{group__create_installer_ga4a96ee0336af9e52512585ceec9ca3a4}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!generate\_Gentoo@{generate\_Gentoo}}
@@ -339,7 +365,7 @@ Launch routines\+: fetch install IO, starge3 archive, create VM.
 
 
 
-Definition at line 1598 of file mkgentoo.\+sh.
+Definition at line 1674 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gadf12a13e0b8f4032d46e50ccd6e0914e}\label{group__create_installer_gadf12a13e0b8f4032d46e50ccd6e0914e}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!get\_options@{get\_options}}
@@ -353,7 +379,7 @@ Parse command line.
 
 
 
-Definition at line 218 of file mkgentoo.\+sh.
+Definition at line 268 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga34f49d33f396400becb2b774e0e35c61}\label{group__create_installer_ga34f49d33f396400becb2b774e0e35c61}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!help\_@{help\_}}
@@ -367,7 +393,7 @@ Print usage to stdout.
 
 
 
-Definition at line 190 of file mkgentoo.\+sh.
+Definition at line 213 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga3cd1eb7159583a231db413e892df7f01}\label{group__create_installer_ga3cd1eb7159583a231db413e892df7f01}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!help\_md@{help\_md}}
@@ -386,6 +412,20 @@ white space at end of echoes is there for markdown in post-\/processing
 
 Definition at line 124 of file mkgentoo.\+sh.
 
+\mbox{\Hypertarget{group__create_installer_ga70c71c5dfdef17318756391741c2abb7}\label{group__create_installer_ga70c71c5dfdef17318756391741c2abb7}} 
+\index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!htmlpage@{htmlpage}}
+\index{htmlpage@{htmlpage}!Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}}
+\doxysubsubsection{\texorpdfstring{htmlpage()}{htmlpage()}}
+{\footnotesize\ttfamily htmlpage (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+Print help to html page. 
+
+
+
+Definition at line 230 of file mkgentoo.\+sh.
+
 \mbox{\Hypertarget{group__create_installer_gab287091d1b1d633e450f830ad82511a0}\label{group__create_installer_gab287091d1b1d633e450f830ad82511a0}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!log\_loop@{log\_loop}}
 \index{log\_loop@{log\_loop}!Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}}
@@ -398,7 +438,7 @@ Loop log tags every minute and optionally plot virtual disk size.
 
 Customizable suing options\+: plot\+\_\+color, plot\+\_\+period, plot\+\_\+position, plot\+\_\+pause, plot\+\_\+span 
 
-Definition at line 1233 of file mkgentoo.\+sh.
+Definition at line 1303 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga51af30a60f9f02777c6396b8247e356f}\label{group__create_installer_ga51af30a60f9f02777c6396b8247e356f}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!main@{main}}
@@ -414,7 +454,7 @@ Main function launching routines.
 \item[\mbox{\hyperlink{todo__todo000002}{Todo}}]Daemonize the part below generate\+\_\+\+Gentoo when \#\+V\+M\+T\+Y\+PE is {\ttfamily headless} so that the script can be detached completely with {\ttfamily nohup mkgentoo.. \&} \end{DoxyRefDesc}
 
 
-Definition at line 1900 of file mkgentoo.\+sh.
+Definition at line 2032 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gac524b24b0add02df542887f9b251eb42}\label{group__create_installer_gac524b24b0add02df542887f9b251eb42}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!make\_boot\_from\_livecd@{make\_boot\_from\_livecd}}
@@ -440,7 +480,21 @@ Will be run in the \$\{VM\} virtual machine
 \end{DoxyRetVals}
 
 
-Definition at line 784 of file mkgentoo.\+sh.
+Definition at line 844 of file mkgentoo.\+sh.
+
+\mbox{\Hypertarget{group__create_installer_gad5b7496783f8df9ed740ac18f294a9f8}\label{group__create_installer_gad5b7496783f8df9ed740ac18f294a9f8}} 
+\index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!manpage@{manpage}}
+\index{manpage@{manpage}!Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}}
+\doxysubsubsection{\texorpdfstring{manpage()}{manpage()}}
+{\footnotesize\ttfamily manpage (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+Print help to man page. 
+
+
+
+Definition at line 221 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gad29a75dbf76ffa08bf28bf4254f234c7}\label{group__create_installer_gad29a75dbf76ffa08bf28bf4254f234c7}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!mount\_live\_cd@{mount\_live\_cd}}
@@ -457,7 +511,34 @@ live CD is mounted under \$\+V\+M\+P\+A\+TH/mnt and rsync\textquotesingle{}d to 
 \end{DoxyNote}
 
 
-Definition at line 702 of file mkgentoo.\+sh.
+Definition at line 762 of file mkgentoo.\+sh.
+
+\mbox{\Hypertarget{group__create_installer_ga47e912030b40c7567600ab02dc8b8a67}\label{group__create_installer_ga47e912030b40c7567600ab02dc8b8a67}} 
+\index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!pdfpage@{pdfpage}}
+\index{pdfpage@{pdfpage}!Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}}
+\doxysubsubsection{\texorpdfstring{pdfpage()}{pdfpage()}}
+{\footnotesize\ttfamily pdfpage (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+Print help to pdf page. 
+
+
+
+Definition at line 239 of file mkgentoo.\+sh.
+
+\mbox{\Hypertarget{group__create_installer_ga154b7fbdd178f7eea9a45c20e67a58d5}\label{group__create_installer_ga154b7fbdd178f7eea9a45c20e67a58d5}} 
+\index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!prepare\_for\_iso\_vm@{prepare\_for\_iso\_vm}}
+\index{prepare\_for\_iso\_vm@{prepare\_for\_iso\_vm}!Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}}
+\doxysubsubsection{\texorpdfstring{prepare\_for\_iso\_vm()}{prepare\_for\_iso\_vm()}}
+{\footnotesize\ttfamily prepare\+\_\+for\+\_\+iso\+\_\+vm (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+Short version of \mbox{\hyperlink{group__create_installer_gadc22bf7533f87e3218aba2acbf75e4c0}{add\+\_\+guest\+\_\+additions\+\_\+to\+\_\+clonezilla\+\_\+iso}} when the I\+SO has already been pre-\/authored. \begin{DoxyNote}{Note}
+Installing the guest additions is a prerequisite to folder sharing between the I\+SO VM and the host. Folder sharing is necessary to recover a compressed clonezilla image of the V\+DI virtual disk into the directory I\+S\+O\+F\+I\+L\+E\+S/home/partimag/image 
+\end{DoxyNote}
+
+
+Definition at line 1992 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gaff896e7d0252924e2224ab0cde968609}\label{group__create_installer_gaff896e7d0252924e2224ab0cde968609}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!test\_cli@{test\_cli}}
@@ -478,7 +559,7 @@ Analyse commandline.
 \item Create globals of the form V\+AR=arg when there is var=arg on commandline \item Otherwise assign default values V\+AR=defaults (3rd argument in array \mbox{\hyperlink{group__create_installer_ga2b36d9209dbee6df3e60d878f3e51005}{A\+RR}}) \item Also checks type of argument against types described for \mbox{\hyperlink{group__create_installer_ga2b36d9209dbee6df3e60d878f3e51005}{A\+RR}} \end{DoxyItemize}
 
 
-Definition at line 404 of file mkgentoo.\+sh.
+Definition at line 454 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga9fb02a8000daf0612335a0b6e5f1e815}\label{group__create_installer_ga9fb02a8000daf0612335a0b6e5f1e815}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!test\_cli\_post@{test\_cli\_post}}
@@ -497,7 +578,7 @@ Check commanline coherence and incompatibilities.
 \end{DoxyRetVals}
 
 
-Definition at line 547 of file mkgentoo.\+sh.
+Definition at line 597 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga738e6a30beb886e891dbe9a6befc4d4a}\label{group__create_installer_ga738e6a30beb886e891dbe9a6befc4d4a}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!test\_cli\_pre@{test\_cli\_pre}}
@@ -516,7 +597,7 @@ Check Virtual\+Box version and prepare commandline analysis.
 \end{DoxyRetVals}
 
 
-Definition at line 290 of file mkgentoo.\+sh.
+Definition at line 340 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga321673d67e2987c793505f7f323894a9}\label{group__create_installer_ga321673d67e2987c793505f7f323894a9}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!test\_vm\_running@{test\_vm\_running}}
@@ -540,7 +621,21 @@ Check if VM as first named argument exists and is running.
 \end{DoxyRetVals}
 
 
-Definition at line 920 of file mkgentoo.\+sh.
+Definition at line 990 of file mkgentoo.\+sh.
+
+\mbox{\Hypertarget{group__create_installer_ga692cf2f94dddfbc83f4f0b0dd08526f3}\label{group__create_installer_ga692cf2f94dddfbc83f4f0b0dd08526f3}} 
+\index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!unmount\_clonezilla\_iso@{unmount\_clonezilla\_iso}}
+\index{unmount\_clonezilla\_iso@{unmount\_clonezilla\_iso}!Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}}
+\doxysubsubsection{\texorpdfstring{unmount\_clonezilla\_iso()}{unmount\_clonezilla\_iso()}}
+{\footnotesize\ttfamily unmount\+\_\+clonezilla\+\_\+iso (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+Unmount the clonezilla filesystem after exiting chroot. Restore the squashfs filesystem. 
+
+
+
+Definition at line 1875 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga70ccc3a81e02612a86b3a3983bc1c586}\label{group__create_installer_ga70ccc3a81e02612a86b3a3983bc1c586}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!validate\_option@{validate\_option}}
@@ -562,7 +657,7 @@ true if legitimate option otherwise false.
 \end{DoxyReturn}
 
 
-Definition at line 205 of file mkgentoo.\+sh.
+Definition at line 255 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga1eee61abdc54f97375ce8ccb16e1e6aa}\label{group__create_installer_ga1eee61abdc54f97375ce8ccb16e1e6aa}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!vbox\_img\_works@{vbox\_img\_works}}
@@ -586,7 +681,7 @@ Currently vbox-\/img is broken for --stdout. Using guestfish as an alternative. 
 \end{DoxyNote}
 
 
-Definition at line 1532 of file mkgentoo.\+sh.
+Definition at line 1608 of file mkgentoo.\+sh.
 
 
 
