--- a/doc/latex/mkgentoo_8sh.tex
+++ b/doc/latex/mkgentoo_8sh.tex
@@ -12,6 +12,12 @@ Process options, create Gentoo Virtual\+Box machine and optionally create clonez
 \begin{DoxyCompactList}\small\item\em Print usage in markdown format. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_ga34f49d33f396400becb2b774e0e35c61}{help\+\_\+}} ()
 \begin{DoxyCompactList}\small\item\em Print usage to stdout. \end{DoxyCompactList}\item 
+\mbox{\hyperlink{group__create_installer_gad5b7496783f8df9ed740ac18f294a9f8}{manpage}} ()
+\begin{DoxyCompactList}\small\item\em Print help to man page. \end{DoxyCompactList}\item 
+\mbox{\hyperlink{group__create_installer_ga70c71c5dfdef17318756391741c2abb7}{htmlpage}} ()
+\begin{DoxyCompactList}\small\item\em Print help to html page. \end{DoxyCompactList}\item 
+\mbox{\hyperlink{group__create_installer_ga47e912030b40c7567600ab02dc8b8a67}{pdfpage}} ()
+\begin{DoxyCompactList}\small\item\em Print help to pdf page. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_ga70ccc3a81e02612a86b3a3983bc1c586}{validate\+\_\+option}} (option)
 \begin{DoxyCompactList}\small\item\em Check if argument is part of array \mbox{\hyperlink{group__create_installer_ga2b36d9209dbee6df3e60d878f3e51005}{A\+RR}} as a legitimate commandline option. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_gadf12a13e0b8f4032d46e50ccd6e0914e}{get\+\_\+options}} ()
@@ -55,8 +61,14 @@ Process options, create Gentoo Virtual\+Box machine and optionally create clonez
 \mbox{\hyperlink{group__create_installer_gadc22bf7533f87e3218aba2acbf75e4c0}{add\+\_\+guest\+\_\+additions\+\_\+to\+\_\+clonezilla\+\_\+iso}} ()
 \begin{DoxyCompactList}\small\item\em Download clonezilla I\+SO or recover it from cache calling \mbox{\hyperlink{fetch__functions_8sh_a996431f89efbe6441611e593254e487f}{fetch\+\_\+process\+\_\+clonezilla\+\_\+iso}}. ~\newline
 Upgrade it with virtualbox guest additions. \end{DoxyCompactList}\item 
+\mbox{\hyperlink{group__create_installer_ga31786ef47f514c713cfeb361f37b7ab7}{bind\+\_\+mount\+\_\+clonezilla\+\_\+iso}} ()
+\begin{DoxyCompactList}\small\item\em Fetches the clonezilla I\+SO. mount it to mnt, rsync it to mnt2 and I\+S\+O\+F\+I\+L\+ES bind-\/mount mnt2 live filesystem after unsquashfs. \end{DoxyCompactList}\item 
+\mbox{\hyperlink{group__create_installer_ga692cf2f94dddfbc83f4f0b0dd08526f3}{unmount\+\_\+clonezilla\+\_\+iso}} ()
+\begin{DoxyCompactList}\small\item\em Unmount the clonezilla filesystem after exiting chroot. Restore the squashfs filesystem. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_gaf8725880181e1189e31629b07163aaa4}{clonezilla\+\_\+device\+\_\+to\+\_\+image}} ()
 \begin{DoxyCompactList}\small\item\em Create Clone\+Zilla xz-\/compressed image out of an external block device (like a U\+SB stick) \end{DoxyCompactList}\item 
+\mbox{\hyperlink{group__create_installer_ga154b7fbdd178f7eea9a45c20e67a58d5}{prepare\+\_\+for\+\_\+iso\+\_\+vm}} ()
+\item 
 \mbox{\hyperlink{group__create_installer_ga51af30a60f9f02777c6396b8247e356f}{main}} ()
 \begin{DoxyCompactList}\small\item\em Main function launching routines. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Variables}
@@ -137,7 +149,7 @@ you should have at least 55 GB of free disk space in the current directory or in
 
 
 
-Definition at line 742 of file mkgentoo.\+sh.
+Definition at line 802 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{mkgentoo_8sh_a99fb68646489d046faa1a0478d7c8e76}\label{mkgentoo_8sh_a99fb68646489d046faa1a0478d7c8e76}} 
 \index{mkgentoo.sh@{mkgentoo.sh}!LOG@{LOG}}
@@ -147,7 +159,7 @@ Definition at line 742 of file mkgentoo.\+sh.
 
 
 
-Definition at line 225 of file mkgentoo.\+sh.
+Definition at line 275 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{mkgentoo_8sh_ad1451b50408769582d8f5bd4254fe7b1}\label{mkgentoo_8sh_ad1451b50408769582d8f5bd4254fe7b1}} 
 \index{mkgentoo.sh@{mkgentoo.sh}!PATH@{PATH}}
@@ -157,5 +169,5 @@ Definition at line 225 of file mkgentoo.\+sh.
 
 
 
-Definition at line 1088 of file mkgentoo.\+sh.
+Definition at line 1158 of file mkgentoo.\+sh.
 
